==> trigrass2/like-posix/drivers/ethernet/enc28j60.c <==
#include "enc28j60.h"
#include <stdint.h>
#include <stdio.h>
#include "net_config.h"
#define enc28j60_select() GPIO_ResetBits(ENC28J60_SPI_NSS_PORT, ENC28J60_SPI_NSS_PIN)
#define enc28j60_release() GPIO_SetBits(ENC28J60_SPI_NSS_PORT, ENC28J60_SPI_NSS_PIN)

void enc28j60_init(uint8_t *macadr)
{
	enc28j60_gpio_init();
	enc28j60_spi_init();

	enc28j60_release();
	enc28j60_reset();
	enc28j60_soft_reset();

	// Setup Rx/Tx buffer
	enc28j60_rxrdpt = ENC28J60_RXSTART;
	enc28j60_wcr16(ERXST, ENC28J60_RXSTART);
	enc28j60_wcr16(ERXRDPT, ENC28J60_RXSTART);
	enc28j60_wcr16(ERXND, ENC28J60_RXEND);
	enc28j60_wcr16(ETXST, ENC28J60_TXSTART);
	enc28j60_wcr16(ETXND, ENC28J60_BUFEND);

	// enc28j60_wcr(ERXFCON, ERXFCON_UCEN|ERXFCON_CRCEN|ERXFCON_BCEN);
	enc28j60_wcr(ERXFCON, ERXFCON_UCEN|ERXFCON_CRCEN|ERXFCON_PMEN|ERXFCON_BCEN);
	enc28j60_wcr16(EPMM0, 0x303f);
	enc28j60_wcr16(EPMCSL, 0xf7f9);

	// Setup MAC
	enc28j60_wcr(MACON1, MACON1_TXPAUS|MACON1_RXPAUS|MACON1_MARXEN);
	enc28j60_wcr(MACON2, 0);
	// enc28j60_bfs(MACON3, MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN);//|MACON3_FULDPX);
	enc28j60_wcr(MACON3, MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN|MACON3_FULDPX);
	enc28j60_wcr16(MAMXFL, ENC28J60_MAXFRAME);
	enc28j60_wcr(MABBIPG, 0x12);
	// enc28j60_wcr(MABBIPG, 0x15); // Set inter-frame gap
	enc28j60_wcr16(MAIPGL, 0x0C12);
	enc28j60_wcr(MAADR5, macadr[0]); // Set MAC address
	enc28j60_wcr(MAADR4, macadr[1]);
	enc28j60_wcr(MAADR3, macadr[2]);
	enc28j60_wcr(MAADR2, macadr[3]);
	enc28j60_wcr(MAADR1, macadr[4]);
	enc28j60_wcr(MAADR0, macadr[5]);

	// Setup PHY
	enc28j60_write_phy(PHCON1, PHCON1_PDPXMD); // Force full-duplex mode
	enc28j60_write_phy(PHCON2, PHCON2_HDLDIS); // Disable loopback

	// Enable interrupts
	enc28j60_bfs(EIE, EIE_INTIE|EIE_PKTIE);
	// Enable Rx packets
	enc28j60_bfs(ECON1, ECON1_RXEN);

	enc28j60_write_phy(PHLCON, PHLCON_LACFG2|
		PHLCON_LBCFG2|PHLCON_LBCFG1|PHLCON_LBCFG0|
		PHLCON_LFRQ0|PHLCON_STRCH);

	printf("enc28j60 rev.%X\n",
			enc28j60_revision());
}

void enc28j60_gpio_init()
{
	GPIO_InitTypeDef GPIO_InitStruct;
#if FAMILY == STM32F1
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP;

	// MOSI & CLK
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_MOSI_PIN;
	GPIO_Init(ENC28J60_SPI_MOSI_PORT, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_SCK_PIN;
	GPIO_Init(ENC28J60_SPI_SCK_PORT, &GPIO_InitStruct);

	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IPU;

	// MISO, INT
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_MISO_PIN;
	GPIO_Init(ENC28J60_SPI_MISO_PORT, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_NINT_PIN;
	GPIO_Init(ENC28J60_SPI_NINT_PORT, &GPIO_InitStruct);

	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;

	// SS, RESET
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_NSS_PIN;
	GPIO_Init(ENC28J60_SPI_NSS_PORT, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_NRST_PIN;
	GPIO_Init(ENC28J60_SPI_NRST_PORT, &GPIO_InitStruct);
#elif FAMILY == STM32F4
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;

	// MOSI & CLK
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_MOSI_PIN;
	GPIO_Init(ENC28J60_SPI_MOSI_PORT, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_SCK_PIN;
	GPIO_Init(ENC28J60_SPI_SCK_PORT, &GPIO_InitStruct);

	GPIO_InitStruct.GPIO_OType = GPIO_OType_OD;

	// MISO
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_MISO_PIN;
	GPIO_Init(ENC28J60_SPI_MISO_PORT, &GPIO_InitStruct);

	GPIO_PinAFConfig(ENC28J60_SPI_MOSI_PORT, ENC28J60_SPI_MOSI_PINSOURCE, ENC28J60_SPI_ALT_FUNCTION);
	GPIO_PinAFConfig(ENC28J60_SPI_MISO_PORT, ENC28J60_SPI_MISO_PINSOURCE, ENC28J60_SPI_ALT_FUNCTION);
	GPIO_PinAFConfig(ENC28J60_SPI_SCK_PORT, ENC28J60_SPI_SCK_PINSOURCE, ENC28J60_SPI_ALT_FUNCTION);

	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
	GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;

	// SS, RESET
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_NSS_PIN;
	GPIO_Init(ENC28J60_SPI_NSS_PORT, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_NRST_PIN;
	GPIO_Init(ENC28J60_SPI_NRST_PORT, &GPIO_InitStruct);


	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN;
	GPIO_InitStruct.GPIO_OType = GPIO_OType_OD;
	GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;

	// INT
	GPIO_InitStruct.GPIO_Pin = ENC28J60_SPI_NINT_PIN;
	GPIO_Init(ENC28J60_SPI_NINT_PORT, &GPIO_InitStruct);
#endif
}

void enc28j60_soft_reset()
{
	enc28j60_select();
	enc28j60_tx(ENC28J60_SPI_SC);
	enc28j60_release();

	enc28j60_current_bank = 0;
	delay(10);
}

void enc28j60_reset()
{
	GPIO_ResetBits(ENC28J60_SPI_NRST_PORT, ENC28J60_SPI_NRST_PIN);
	delay(100);
	GPIO_SetBits(ENC28J60_SPI_NRST_PORT, ENC28J60_SPI_NRST_PIN);
}

void enc28j60_read_buffer(uint8_t *buf, uint16_t len)
{
	enc28j60_select();
	enc28j60_tx(ENC28J60_SPI_RBM);
	while(len--)
		*(buf++) = enc28j60_rx();
	enc28j60_release();
}

void enc28j60_write_buffer(uint8_t *buf, uint16_t len)
{
	enc28j60_select();
	enc28j60_tx(ENC28J60_SPI_WBM);
	while(len--)
		enc28j60_tx(*(buf++));
	enc28j60_release();
}

uint16_t enc28j60_read_phy(uint8_t adr)
{
	enc28j60_wcr(MIREGADR, adr);
	enc28j60_bfs(MICMD, MICMD_MIIRD);
	while(enc28j60_rcr(MISTAT) & MISTAT_BUSY);
	enc28j60_bfc(MICMD, MICMD_MIIRD);
	return enc28j60_rcr16(MIRD);
}

void enc28j60_write_phy(uint8_t adr, uint16_t data)
{
	enc28j60_wcr(MIREGADR, adr);
	enc28j60_wcr16(MIWR, data);
	while(enc28j60_rcr(MISTAT) & MISTAT_BUSY);
}

void enc28j60_send_packet(uint8_t *data, uint16_t len)
{
	while(enc28j60_rcr(ECON1) & ECON1_TXRTS)
	{
		// TXRTS may not clear - ENC28J60 bug. We must reset
		// transmit logic in cause of Tx error
		if(enc28j60_rcr(EIR) & EIR_TXERIF)
		{
			enc28j60_bfs(ECON1, ECON1_TXRST);
			enc28j60_bfc(ECON1, ECON1_TXRST);
		}
	}

	enc28j60_wcr16(EWRPT, ENC28J60_TXSTART);
	enc28j60_write_buffer((uint8_t*)"\0", 1);
	enc28j60_write_buffer(data, len);

	enc28j60_wcr16(ETXST, ENC28J60_TXSTART);
	enc28j60_wcr16(ETXND, ENC28J60_TXSTART + len);
 	// Request packet send
	enc28j60_bfs(ECON1, ECON1_TXRTS);
}

uint16_t enc28j60_recv_packet(uint8_t *buf, uint16_t buflen)
{
	uint16_t len = 0, rxlen, status, temp;

	if(enc28j60_rcr(EPKTCNT))
	{
		enc28j60_wcr16(ERDPT, enc28j60_rxrdpt);

		enc28j60_read_buffer((void*)&enc28j60_rxrdpt, sizeof(enc28j60_rxrdpt));
		enc28j60_read_buffer((void*)&rxlen, sizeof(rxlen));
		enc28j60_read_buffer((void*)&status, sizeof(status));

		if(status & ENC28J60_RX_STATUS_VECTOR_RX_OK)
		{
			len = rxlen - 4; //throw out crc
			if(len > buflen)
				len = buflen;
			enc28j60_read_buffer(buf, len);
		}

		// Set Rx read pointer to next packet
		// take care, never set ERXRDPT to an even number.
		// sinceenc28j60_rxrdpt is always even, subtract 1.
		// also deal with wrap around.
		if(enc28j60_rxrdpt == ENC28J60_RXSTART)
			temp = ENC28J60_RXEND;
		else
			temp = enc28j60_rxrdpt - 1;
		enc28j60_wcr16(ERXRDPT, temp);
		// Decrement packet counter
		enc28j60_bfs(ECON2, ECON2_PKTDEC);
	}

	return len;
}
